--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "null"
+    "test": "yarn prettier --check ."
   },
   "repository": {
     "type": "git",
