--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "yarn prettier --check ."
+    "test": "yarn prettier --check .",
+    "build":"zip ./build/build.zip ./*"
   },
   "repository": {
     "type": "git",
