--- a/ExpressJs/exp11.Express_TodoApp_backend/package.json
+++ b/ExpressJs/exp11.Express_TodoApp_backend/package.json
@@ -2,7 +2,6 @@
   "name": "ExpressJs",
   "version": "1.0.0",
   "description": "A expressJs project",
-  "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js"
   },
@@ -19,6 +18,7 @@
   "author": "MD JABER HOSSAIN CHOWDHURY",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "multer": "^1.4.5-lts.1"
